*Empty MediaWiki Message*

--- a/Reboi.mw
+++ b/Reboi.mw
@@ -47,8 +47,8 @@ Fail:Vulpes_vulpes_at_shipwreck.jpg|Reboi
 == Irdkosketused ==
 * [http://www.sevin.ru/vertebrates/index.html?Mammals/214.html Venäman sel'grodaižed živatad: Vulpes vulpes]
 
-[[Kategorii:Živatad|R]]
-[[Kategorii:Imetaiživatad|R]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
+[[Kategorii:Imetaiživatad]]
 
 [[an:Vulpes vulpes]]
 [[ar:ثعلب أحمر]]
