--- a/Sagarm.mw
+++ b/Sagarm.mw
@@ -1,7 +1,7 @@
-[[Image:Fischotter, Lutra Lutra.JPG|thumb|right|300px|Sagarm]]
+[[Fail:Fischotter, Lutra Lutra.JPG|thumb|right|300px|Sagarm]]
 '''Sagarm''' (lat. ''Lutra lutra'') om [[živat]].
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[an:Lutra lutra]]
