*Empty MediaWiki Message*

--- a/Zebr.mw
+++ b/Zebr.mw
@@ -1,7 +1,7 @@
 [[Fail:Beautiful_Zebra_in_South_Africa.JPG|thumb|right|300px|Zebr]]
-'''Zebr''' (lat.: ''Hippotigris'') om kabjživat.
+'''Zebr''' (lat.: ''Hippotigris'') om kabj[[živat]].
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[af:Sebra]]
