*Empty MediaWiki Message*

--- a/Kaži.mw
+++ b/Kaži.mw
@@ -9,7 +9,7 @@ Keskmäine kažin hibjan piduz händata om 60 sm, händan piduz om 25—35 sm. K
 * [http://wcf-online.de/ru/index.html Mail'man kodikažin federacii]
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 [[Kategorii:Kažinvuiččed]]
 
