*Empty MediaWiki Message*

--- a/Koir.mw
+++ b/Koir.mw
@@ -1,10 +1,10 @@
 {{1000}}
 [[Fail:Medalowy borgoj.jpg|pisi|250px|Venälaine mectuzkoir]]
-'''Koir''' ([[Latinan kel'|latinan kelel]]: ''Canis lupus familiaris'', [[Venäkel'|venäkelel]]: ''Собака'') om kodiživat, [[Händikaz|händikahan]] alaerik. Om koiridan rodkundas. Om popularižemb ([[Kaži]]n rindal) «[[živat-kompan'on]]».
+'''Koir''' ([[Latinan kel'|latinan kelel]]: ''Canis lupus familiaris'', [[Venäkel'|venäkelel]]: ''Собака'') om kodiživat, [[Händikaz|händikahan]] alaerik. Om koiridan rodkundas. Om popularižemb ([[Kaži]]n rindal) «[[živat-kompan'jon]]».
 
 {{stub}}
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[ab:Ала]]
