*Empty MediaWiki Message*

--- a/Öläpakaine.mw
+++ b/Öläpakaine.mw
@@ -1,8 +1,8 @@
 [[Fail:Big-eared-townsend-fledermaus.jpg|thumb|right|250px|''[[Corynorhinus townsendii]]'']]
-'''Öläpakaine''' (''Microchiroptera'') om [[živat]].
+'''Öläpakaižed''' (''Microchiroptera'') oma [[živat]]ad.
 {{stub}}
 
-[[Kategorii:Živatad|M]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 
 [[be:Кажаны]]
 [[be-x-old:Кажаны]]
