*Empty MediaWiki Message*

--- a/Mägr.mw
+++ b/Mägr.mw
@@ -2,7 +2,7 @@
 '''Mägr''' (lat. ''Meles meles'') om mec[[živat]].
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[av:Бакьуч]]
