*Empty MediaWiki Message*

--- a/Neglik.mw
+++ b/Neglik.mw
@@ -5,7 +5,7 @@
 * Om levedali tetab mel'pideg, miše neglikod pukstas ičeze negloihe sömäd (ozutesikš — [[jablok]]oid). Nece om petustuz, hot' erašti ned todas-ki ičeze pezaha negloiš lehtesid.
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[az:Adi kirpi]]
