*Empty MediaWiki Message*

--- a/Orav.mw
+++ b/Orav.mw
@@ -2,7 +2,7 @@
 '''Orav''' (lat.: ''Sciurus'') om mec[[živat]].
 {{stub}}
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[als:Eichhörnchen]]
