*Empty MediaWiki Message*

--- a/Gavedid.mw
+++ b/Gavedid.mw
@@ -6,8 +6,7 @@ Gavediden klassha mülüdas [[lipkaižed]], [[kovasuugaižed|bumbakod]], [[kärb
 
 {{stub}}
 
-[[Kategorii:Zoologii]]
-[[Kategorii:Sel'grodatomad]]
+[[Kategorii:Gavedid|*]]
 [[Kategorii:Palačjaugaižed]]
 
 [[af:Insek]]
