*Empty MediaWiki Message*

--- a/Öläpakaine.mw
+++ b/Öläpakaine.mw
@@ -2,7 +2,7 @@
 '''Öläpakaižed''' (''Microchiroptera'') oma [[živat]]ad.
 {{stub}}
 
-[[Kategorii:Živatad kirjamišton mödhe‎]]
+[[Kategorii:Imetaiživatad‎]]
 
 [[be:Кажаны]]
 [[be-x-old:Кажаны]]
