*Empty MediaWiki Message*

--- a/Acolastus_limbatus.mw
+++ b/Acolastus_limbatus.mw
@@ -1,6 +1,7 @@
 '''''Acolastus limbatus''''' om [[gaved']], kudamban avaiži da ümbrikirjuti vl. [[1992]] entomolog Lopatin. Necil gavedil ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
+[[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
 
 [[nl:Acolastus limbatus]]
