*Empty MediaWiki Message*

--- a/Aetheomorpha_pallida.mw
+++ b/Aetheomorpha_pallida.mw
@@ -1,6 +1,7 @@
 '''''Aetheomorpha pallida''''' om [[gaved']], kudamban avaiži da ümbrikirjuti vl. [[1975]] entomolog Medvedev. Necil gavedil ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
+[[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
 
 [[nl:Aetheomorpha pallida]]
