*Empty MediaWiki Message*

--- a/Glipa_formosana.mw
+++ b/Glipa_formosana.mw
@@ -7,6 +7,7 @@ Necen gavedin avaiži da ümbrikirjuti vl. 1911 entomolog Pis..<ref>http://insec
 {{stub}}
 
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[es:Glipa formosana]]
 [[nl:Glipa formosana]]
