*Empty MediaWiki Message*

--- a/Neoneuromus_coomani.mw
+++ b/Neoneuromus_coomani.mw
@@ -2,6 +2,7 @@
 {{stub}}
 
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[nl:Neoneuromus coomani]]
 [[vi:Neoneuromus coomani]]
