*Empty MediaWiki Message*

--- a/Malthodes_anatolicus.mw
+++ b/Malthodes_anatolicus.mw
@@ -5,6 +5,7 @@
 {{stub}}
 
 [[Kategorii:Gavedid]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[nl:Malthodes anatolicus]]
 [[vi:Malthodes anatolicus]]
