*Empty MediaWiki Message*

--- a/Gavedid.mw
+++ b/Gavedid.mw
@@ -1,5 +1,5 @@
 {{1000}}
-[[Fail:Insect collage.png|300px|thumb|Jumalanlehmäine]]
+[[Fail:Insect collage.png|300px|thumb|Gavedid]]
 '''Gavedid''' ([[latinan kel'|lat.:]] ''Insecta'', ''Insecta-Ectognatha'', Ectognatha) om [[sel'gradatomad|sel'grodatomiden]] [[palačjaugaižed|palačjaugaižiden]] [[živat]]oiden klass.
 
 Gavediden klassha mülüdas [[lipkaižed]], [[kovasuugaižed|bumbakod]], [[kärbhaižed]], [[murahaižed]] da toižed.
