*Empty MediaWiki Message*

--- a/Labidostomis_martensi.mw
+++ b/Labidostomis_martensi.mw
@@ -3,7 +3,8 @@
 Necil gavedil ei ole völ nimid rahvahaližil kelil.
 {{stub}}
 
-[[Category:Gavedid]]
+[[Kategorii:Gavedid]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[nl:Labidostomis martensi]]
 [[vi:Labidostomis martensi]]
