--- a/Učubrasad.mw
+++ b/Učubrasad.mw
@@ -1,7 +1,8 @@
 [[Fail:Bumblebee_2006.jpg|300px|thumb|Učubras]]
-'''Učubras''' (lat.: ''Bombus'') om [[gaved']].
+'''Učubras''' ([[latinan kel'|lat.]]: ''Bombus'') om [[gaved']].
 
 [[Kategorii:Gavedid]]
+Živatad kirjamišton mödhe
 
 [[an:Bombus]]
 [[ar:نحلة طنانة]]
