*Empty MediaWiki Message*

--- a/Učubrasad.mw
+++ b/Učubrasad.mw
@@ -2,7 +2,7 @@
 '''Učubras''' ([[latinan kel'|lat.]]: ''Bombus'') om [[gaved']].
 
 [[Kategorii:Gavedid]]
-Živatad kirjamišton mödhe
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[an:Bombus]]
 [[ar:نحلة طنانة]]
