--- a/Theope_sticheli.mw
+++ b/Theope_sticheli.mw
@@ -6,6 +6,7 @@ Necen gavedin avaiži da ümbrikirjuti vl. 1998 entomolog Dž. Holl.<ref>http://
 <references />
 {{stub}}
 
+[[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
 
 [[fr:Theope sticheli]]
