*Empty MediaWiki Message*

--- a/Tetragnatha_conica.mw
+++ b/Tetragnatha_conica.mw
@@ -6,6 +6,7 @@ Necen gavedin avaiži da ümbrikirjuti vl. 1861 entomolog Grube.<ref>http://rese
 <references />
 {{stub}}
 
+[[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
 
 [[nl:Tetragnatha conica]]
