*Empty MediaWiki Message*

--- a/Säs'ked.mw
+++ b/Säs'ked.mw
@@ -1,8 +1,9 @@
 {{1000}}
 [[Fail:Aedes_aegypti_biting_human.jpg|280px|thumb|Säs’k]]
-'''Säs’k''' (lat.: ''Culicidae'') om [[gavedid|gaved']].
+'''Säs'k''' (lat.: ''Culicidae'') om [[gavedid|gaved']].
 {{stub}}
 
+[[Kategorii:Živatad kirjamišton mödhe]]
 [[Kategorii:Gavedid]]
 
 [[als:Stechmücken]]
