*Empty MediaWiki Message*

--- a/Ahvenad.mw
+++ b/Ahvenad.mw
@@ -16,6 +16,7 @@ Ahvenad oma lihansöjad kalad. Ned södas penembid kaloid, [[rakuded|rakuzid]], 
 {{stub}}
 
 [[Kategorii:Kalad]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[af:Perca]]
 [[ba:Алабуға]]
