*Empty MediaWiki Message*

--- a/Vobl.mw
+++ b/Vobl.mw
@@ -21,7 +21,8 @@ Voblan piskud mugažo lähttas merhe. Sigä kalad söteltas hätken. Meres-žo p
 == Irdkosketused ==
 * [http://bioword.narod.ru/V/V141.htm Kirjutuz voblas Biologožes vajehnikas (venäkelel)]
 
-[[Category:Kalad]]
+[[Kategorii:Kalad]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[be:Вобла]]
 [[be-x-old:Вобла]]
