*Empty MediaWiki Message*

--- a/Kajaged_(heim).mw
+++ b/Kajaged_(heim).mw
@@ -1,8 +1,9 @@
 [[Fail:Lachmoewe2cele4.jpg|thumb|right|300px|Kajag]]
-'''Kajag''' (lat. ''Laridae'') om [[lind]].
+'''Kajag''' ([[latinan kel'|lat.]] ''Laridae'') om [[lind]].
 {{stub}}
 
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[ar:نورس]]
 [[az:Qağayılar]]
