*Empty MediaWiki Message*

--- a/Kotkad.mw
+++ b/Kotkad.mw
@@ -2,7 +2,8 @@
 '''Pähkim''' (lat.: ''Aquila'') om [[lind]].
 {{stub}}
 
-[[Category:Lindud]]
+[[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[ar:عقبان حقيقية]]
 [[az:Qartal]]
