*Empty MediaWiki Message*

--- a/Küuki.mw
+++ b/Küuki.mw
@@ -4,6 +4,6 @@
 {{stub}}
 
 [[Kategorii:Lindud]]
-[[Kategorii:Živatad kirjmišton mödhe]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[ru:Большой улит]]
