*Empty MediaWiki Message*

--- a/Kur'ged.mw
+++ b/Kur'ged.mw
@@ -1,9 +1,10 @@
 [[Fail:Grus grus 2 (Marek Szczepanek).jpg|pisi|250px|Hahk kurg]]
-'''Kurg''' (lat.: ''Grus'') om [[meclind]].
+'''Kurg''' (lat.: ''Grus'') om mec[[lind]].
 
 {{stub}}
 
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[af:Kraanvoël]]
 [[an:Gruidae]]
