*Empty MediaWiki Message*

--- a/Vilulind.mw
+++ b/Vilulind.mw
@@ -2,6 +2,7 @@
 '''Vilulind''' (lat.: ''Pyrrhula pyrrhula'') om [[lind]].
 
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[als:Gimpel (Vogel)]]
 [[ba:Ҡыҙылтүш]]
