*Empty MediaWiki Message*

--- a/Variš.mw
+++ b/Variš.mw
@@ -6,6 +6,7 @@
 Varišad krongaba — nece om hondoks säks.
 
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[an:Corvus cornix]]
 [[av:Гъеду]]
