*Empty MediaWiki Message*

--- a/Tijaižed.mw
+++ b/Tijaižed.mw
@@ -2,6 +2,7 @@
 '''Tijaine''' (lat.: ''Paridae'') om [[lind]].
 
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[ang:Māse]]
 [[az:Arıquşlar]]
