*Empty MediaWiki Message*

--- a/Sorzad_(heim).mw
+++ b/Sorzad_(heim).mw
@@ -2,6 +2,7 @@
 '''Sorz''' ([[latinan kel'|lat.]]: ''Anas'') om [[lind]].
 
 [[Kategorii:Lindud]]
+[[Kategorii:Živatad kirjamišton mödhe]]
 
 [[af:Eend]]
 [[als:Ente]]
