У Игоря с инессивом, у Зайцевой с партитивом и через A, но в любом случае только как предлог...

--- a/Malind.mw
+++ b/Malind.mw
@@ -1,5 +1,5 @@
 [[Fail:Bank Swallow (Riparia riparia).jpg|thumb|right|250px|Malind]]
-'''Malind''' ([[latinan kel'|lat.]]: ''Riparia riparia'', [[venäkel'|ven.]]: ''Береговая ласточка'') om pen' [[Kezalindud|kezalind]]. Eläb kaikid kontinentail (sidä kesken [[Evrazii|Evrazijal]]), [[Avstralii (kontinent)|Avstralijan]] da [[Antarktid]]an päiči.
+'''Malind''' ([[latinan kel'|lat.]]: ''Riparia riparia'', [[venäkel'|ven.]]: ''Береговая ласточка'') om pen' [[Kezalindud|kezalind]]. Eläb kaikid kontinentail (sidä kesken [[Evrazii|Evrazijal]]), päiči [[Avstralii (kontinent)|Avstralijas]] da [[Antarktid]]as.
 {{stub}}
 
 [[Kategorii:Lindud]]
