--- a/Sagarm.mw
+++ b/Sagarm.mw
@@ -1,5 +1,5 @@
 [[Fail:Fischotter, Lutra Lutra.JPG|thumb|right|300px|Sagarm]]
-'''Sagarm''' (lat. ''Lutra lutra'') om [[živat]].
+'''Sagarm''' (dial. mugažo '''Sagarv''') ([[Latinan kel'|lat.]] ''Lutra lutra'') om [[živat]].
 
 [[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
