*Empty MediaWiki Message*

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -11,5 +11,5 @@ Režissörad — [[Studennikov Viktor|Viktor Studennikov]] i [[Aleksandr Tütrü
 
 {{stub}}
 
-[[Kategorii:Vepsläižed]]
+[[Kategorii:Fil'mad Vepsänman polhe]]
 [[Kategorii:Fil'mad kirjamišton mödhe]]
