--- a/Lacuna_Coil:an_diskografii.mw
+++ b/Lacuna_Coil:an_diskografii.mw
@@ -24,7 +24,7 @@ Se om tauz' '''[[Lacuna Coil]]-kollektivan diskografii'''.
 # '''[[Manifesto of Lacuna Coil]]''' — 27. uhoku 2009
 
 === EP:id ===
-# '''[[Lacuna Coil (EP)|Lacuna Coil]] — 7. sulaku 1998
+# '''[[Lacuna Coil (EP)|Lacuna Coil]]''' — 7. sulaku 1998
 # '''[[Halflife]]''' — 18. kül'mku 2000
 
 == Singlad ==
