*Empty MediaWiki Message*

--- a/Habobatk.mw
+++ b/Habobatk.mw
@@ -3,7 +3,7 @@
 
 {{stub}}
 
-[[Kategorii:Sened kirjamišton mödhe]]
+[[Kategorii:Sened i babukad kirjamišton mödhe]]
 [[Kategorii:Södabad sened]]
 
 [[ru:Подосиновик красный]]
