*Empty MediaWiki Message*

--- a/Hydnellum_peckii.mw
+++ b/Hydnellum_peckii.mw
@@ -4,7 +4,7 @@
 Eraz pen'. Kazvab vaiše [[sügüz'|sügüzel]], [[kavag'mec|kavag'mecoiš]]. Lujas karged.
 {{stub}}
 
-[[Kategorii:Sened kirjamišton mödhe]]
+[[Kategorii:Sened i babukad kirjamišton mödhe]]
 [[Kategorii:Koiransened]]
 
 [[en:Hydnellum peckii]]
