*Empty MediaWiki Message*

--- a/Nug.mw
+++ b/Nug.mw
@@ -1,5 +1,5 @@
 [[Fail:Turrón blando y duro.jpg|thumb|right|250px|Nug]]
-'''Nug''' ([[francijan kel'|franc.]]: ''nougat'') om maged produkt [[mezi]]späi, [[pähkim|pähkmidašpäi]] da [[munavauktuš]]aspäi.
+'''Nug''' ([[francijan kel'|franc.]]: ''nougat'') om maged produkt [[mede]]späi, [[pähkim|pähkmišpäi]] da [[munavauktuš]]espäi.
 {{stub}}
 
 [[Kategorii:Konditerižed tegesed]]
