*Empty MediaWiki Message*

--- a/Jalaim'.mw
+++ b/Jalaim'.mw
@@ -1,5 +1,5 @@
 [[Fail:Mature Ulmus rubra in graveyard.jpg|thumb|300px|Jalam]]
-'''Jalam''' ({{kel’+la|Úlmus}}) om leht[[pu]].
+'''Jalaim'''' (vai '''Jalam''') ({{kel’+la|Úlmus}}) om leht[[pu]].
 {{stub}}
 
 [[Kategorii:Kazmused kirjamišton mödhe]]
