--- a/Must_variš.mw
+++ b/Must_variš.mw
@@ -1,6 +1,6 @@
 [[Fail:Corvus corone Rabenkrähe 1.jpg|thumb|right|250px|Must variš]]
 
-'''Must variš''' ([[Latinan kel'|latinan kelel]]: ''Corvus corone'', [[Venäkel'|venäkelel]]: ''Чёрная ворона'') om keza[[lind]].
+'''Must variš''' (vai '''kron'a''') ([[Latinan kel'|latinan kelel]]: ''Corvus corone'', [[Venäkel'|venäkelel]]: ''Чёрная ворона'') om keza[[lind]].
 
 {{stub}}
 
