*Empty MediaWiki Message*

--- a/Öhabuk.mw
+++ b/Öhabuk.mw
@@ -1,5 +1,5 @@
 [[Fail:Caprimulgus europaeus 1200x855.jpg|thumb|right|300px|Öhabuk]]
-'''Öhabuk''' ([[latinan kel'|lat.]] ''Caprimulgus europaeus'') om [[lind]].
+'''Öhabuk''' (vai '''ökägi''') ([[latinan kel'|lat.]] ''Caprimulgus europaeus'') om [[lind]].
 
 {{stub}}
 
