*Empty MediaWiki Message*

--- a/Kotkad.mw
+++ b/Kotkad.mw
@@ -1,5 +1,5 @@
-[[Image:GoldenEagle-Nova.jpg|thumb|right|300px|Pähkim]]
-'''Pähkim''' (lat.: ''Aquila'') om [[lind]].
+[[Image:GoldenEagle-Nova.jpg|thumb|right|300px|Kotk]]
+'''Kotk''' (vai '''orl''') ([[Latinan kel'|lat.]]: ''Aquila'') om [[lind]].
 {{stub}}
 
 [[Kategorii:Lindud]]
