--- a/Jablonovskii-sild_(Piter).mw
+++ b/Jablonovskii-sild_(Piter).mw
@@ -1,3 +1,4 @@
+{{tärtused|Jablonovskii sild}}
 [[Fail:Yablonovskiy bridge.jpg|thumb|right|325px|Jablonovskii sild]]
 '''Jablonovskii sild''' ([[Venäkel'|ven.]] ''Яблоновский мост'') om jaugnikoiden sild [[Piter]]iš [[Okkervil' (jogi)|Okkervil']]-joges päliči.
 
