--- a/Jablonovskii-sild_(Krasnodar).mw
+++ b/Jablonovskii-sild_(Krasnodar).mw
@@ -1,3 +1,4 @@
+{{tärtused|Jablonovskii sild}}
 '''Jablonovskii sild''' ([[Venäkel'|ven.]] ''Яблоновский мост'') om sild [[Krasnodar]]as [[Kuban' (jogi)|Kuban']]-joges päliči.
 
 Sild ühtištoitab Krasnodar-lidnad i [[Jablonovskii (Adigei)|Jablonovskii]]-žilod [[Adigei|Adigejas]].
