*Empty MediaWiki Message*

--- a/Tedr.mw
+++ b/Tedr.mw
@@ -1,4 +1,5 @@
 [[Fail:Black Grouse Nationalpark Bayerischer Wald.jpg|thumb|right|225px|Tedr]]
+[[Fail:Tétras lyre MHNT.jpg|thumb | ''Lyrurus tetrix tetrix'']]
 '''Tedr''' ([[Latinan kel'|lat.]]: ''Lyrurus'') om [[lind]].
 {{stub}}
 
