*Empty MediaWiki Message*

--- a/Pähkim.mw
+++ b/Pähkim.mw
@@ -1,2 +1,8 @@
-#suuna [[Kotk]]
+[[Fail:Healthy vegan snack.jpg|thumb|right|250px|Pähkmed]]
+'''Pähkim''' om [[kazmused|kazmusiden]] rivin [[plod]], tobjimalaz söbad südäitukunke da kova korenke.
+{{stub}}
 
+[[Kategorii:Söbadad pähkmed da semened|*]]
+[[Kategorii:Plod]]
+
+[[ru:Орех]]
