*Empty MediaWiki Message*

--- a/Tatu.mw
+++ b/Tatu.mw
@@ -3,7 +3,8 @@
 {{stub}}
 
 [[Kategorii:Hibjan modifikacijad]]
-[[Kategorii:Tatu]]
+[[Kategorii:Tatu|*]]
+[[Kategorii:Bodiart]]
 
 [[an:Tatuache]]
 [[ar:وشم]]
