--- a/Elizavet_II.mw
+++ b/Elizavet_II.mw
@@ -1,7 +1,7 @@
 [[Fail:Koningin Elizabeth II van die Verenigde Koninkryk.jpg|thumb|right|250px|Elizavet Toine]]
 '''Elizavet Toine''' ([[anglijan kel'|angl.]]: ''Elisabeth II''; ünäine nimi — '''Elizabet Aleksandra Marija (Vindzor)''' ([[anglijan kel'|angl.]]: ''Elisabeth Alexandra Mary (Windsor)''); sünd. [[21. sulaku]] [[1926]], [[London]], [[Anglii]]) om 12. da nügüdläine [[Sur' Britanii|britanijan]] kunigaznaine.
 
-Hän om mugažo [[Avstralii (valdkund)|Avstralijan]], [[Antigua da Barbud|Antiguan da Barbudan]], [[Bagaman Sared|Bagaman Sariden]], [[Barbados]]an, [[Beliz]]an, [[Grenad]]an, [[Kanad]]an, [[Uz' Zelandii|Uden Zelandijan]], [[Papua — Uz' Gvinei|Papua — Uden Gvinejan]], [[Sent Vinstent da Grenadinad|Sent Vinstentan da Grenadinoiden]], [[Sent Kits da Nevis|Sent Kitsan da Nevisan]], [[Sent Lüsii|Sent Lüsijan]], [[Solomonan Sared|Solomonan Sariden]], [[Tuvalu]]n da [[Jamaik]]an kunigaznaine. 
+Hän om mugažo [[Avstralii (valdkund)|Avstralijan]], [[Antigua da Barbud|Antiguan da Barbudan]], [[Bagaman Sared|Bagaman Sariden]], [[Barbados]]an, [[Beliz]]an, [[Grenad]]an, [[Kanad]]an, [[Uz' Merima|Uden Meriman]], [[Papua — Uz' Gvinei|Papua — Uden Gvinejan]], [[Sent Vinstent da Grenadinad|Sent Vinstentan da Grenadinoiden]], [[Sent Kits da Nevis|Sent Kitsan da Nevisan]], [[Sent Lüsii|Sent Lüsijan]], [[Solomonan Sared|Solomonan Sariden]], [[Tuvalu]]n da [[Jamaik]]an kunigaznaine. 
 {{stub}}
 
 [[Kategorii:Valdkundmehed]]
@@ -13,7 +13,7 @@ Hän om mugažo [[Avstralii (valdkund)|Avstralijan]], [[Antigua da Barbud|Antigu
 [[Kategorii:Beliz]]
 [[Kategorii:Grenad]]
 [[Kategorii:Kanad]]
-[[Kategorii:Uz' Zelandii]]
+[[Kategorii:Uz' Merima]]
 [[Kategorii:Papua — Uz' Gvinei]]
 [[Kategorii:Sent Vinstent da Grenadinad]]
 [[Kategorii:Sent Kits da Nevis]]
