--- a/Ezmäine_mail'man_voin.mw
+++ b/Ezmäine_mail'man_voin.mw
@@ -17,7 +17,7 @@ Voinan formaližen augotišen tegosün oli [[Franc Ferdinand|Francan Ferdinandan
 * [[Sur' Britanii]] i dominionad
 ** [[Kanad]]
 ** [[Avstralii]]
-** [[Uz' Zelandii]]
+** [[Uz' Merima]]
 ** [[Suvi Afrik]]
 * [[Japonii]]
 * [[Italii]] (ezmäi oli Keskvaldkundoiden ühtnenu, sid' tuli Antantaha)
