--- a/Ezmäine_mail'man_voin.mw
+++ b/Ezmäine_mail'man_voin.mw
@@ -18,7 +18,7 @@ Voinan formaližen augotišen tegosün oli [[Franc Ferdinand|Francan Ferdinandan
 ** [[Kanad]]
 ** [[Avstralii]]
 ** [[Uz' Merima]]
-** [[Suvi Afrik]]
+** [[Suviafrik]]
 * [[Japonii]]
 * [[Italii]] (ezmäi oli Keskvaldkundoiden ühtnenu, sid' tuli Antantaha)
 * [[AÜV]] (tuliba voinaha vl 1917)
