*Empty MediaWiki Message*

--- a/Celati_Marko_Koti.mw
+++ b/Celati_Marko_Koti.mw
@@ -1,3 +1,7 @@
 <center>FOR STEWARDS: PAGE IS UNDER CONSTRUCTION! DO NOT EDIT!</center>
 
+[[es:Marco Coti Zelati]]
+[[fr:Marco Coti Zelati]]
 [[it:Marco Coti Zelati]]
+[[pl:Marco Coti Zelati]]
+[[pt:Marco Coti Zelati]]
