*Empty MediaWiki Message*

--- a/Lacuna_Coil.mw
+++ b/Lacuna_Coil.mw
@@ -1,5 +1,5 @@
 [[Fail:Lacuna Coil Ozzfest 2006.jpg|thumb|right|250px|Lacuna Coil]]
-'''«Lacuna Coil»''' om [[Italii|italijalaine]] muzikaline [[gotikmetal]]grupp. Mülükund om ''[[Skabbija Kristina|Kristina Skabbija]]'', ''Kristiano Moccati'', ''Marko Koti Celati'', ''[[Ferro Andrea|Andrea Ferro]]'' da ''Kristiano Mil'jore''.
+'''«Lacuna Coil»''' om [[Italii|italijalaine]] muzikaline [[gotikmetal]]grupp. Mülükund om ''[[Skabbija Kristina|Kristina Skabbija]]'', ''Kristiano Moccati'', ''Marko Koti Celati'', ''[[Ferro Andrea|Andrea Ferro]]'', ''Marko B'jacci'' da ''Kristiano Mil'jore''.
 
 == Diskografii ==
 {{kacu|Lacuna Coil:an diskografii}}
