*Empty MediaWiki Message*

--- a/Moccati_Kristiano.mw
+++ b/Moccati_Kristiano.mw
@@ -5,4 +5,6 @@
 [[Kategorii:Barabananvändajad]]
 [[Kategorii:Lacuna Coil]]
 
+[[es:Cristiano Mozzati]]
 [[it:Cristiano Mozzati]]
+[[pt:Cristiano Mozzati]]
