*Empty MediaWiki Message*

--- a/Mil'jore_Kristiano.mw
+++ b/Mil'jore_Kristiano.mw
@@ -1,3 +1,8 @@
-<center>FOR STEWARDS: PAGE IS UNDER CONSTRUCTION! DO NOT EDIT!</center>
+'''Kristiano Mil'jore''' ([[italijan kel'|ital.]]: ''Cristiano Migliore''; sünd. [[20. semendku]] [[1971]], [[Milan]], [[Italii]]) om italijalaine gitarist, [[Lacuna Coil]]-kollektivan ühtnii.
+{{stub}}
+{{Lacuna Coil}}
+
+[[Kategorii:Gitaristad]]
+[[Kategorii:Lacuna Coil]]
 
 [[it:Cristiano Migliore]]
