*Empty MediaWiki Message*

--- a/Moccati_Kristiano.mw
+++ b/Moccati_Kristiano.mw
@@ -1,6 +1,7 @@
 [[Fail:Cristiano Mozzati.jpg|thumb|right|250px|Kristiano Moccati]]
 '''Kristiano «CriZ» Moccati''' ([[italijan kel'|ital.]]: ''Cristiano Mozzati''; sünd. [[13. eloku]] [[1973]], [[Pezaro]], [[Italii]]) om italijalaine barabananvändai, [[Lacuna Coil]]-kollektivan ühtnii.
 {{stub}}
+{{Lacuna Coil}}
 
 [[Kategorii:Barabananvändajad]]
 [[Kategorii:Lacuna Coil]]
