*Empty MediaWiki Message*

--- a/Celati_Marko_Koti.mw
+++ b/Celati_Marko_Koti.mw
@@ -1,4 +1,9 @@
-<center>FOR STEWARDS: PAGE IS UNDER CONSTRUCTION! DO NOT EDIT!</center>
+[[Fail:Marco Coti Zelati.jpg|thumb|right|250px|Marko Koti Celati]]
+'''Marko Koti Celati''' ([[italijan kel'|ital.]]: ''Marco Coti Zelati''; sünd. [[19. eloku]] [[1975]], [[Milan]], [[Italii]]) om italijalaine basgitarist, [[Lacuna Coil]]-kollektivan ühtnii.
+{{stub}}
+
+[[Kategorii:Gitaristad]]
+[[Kategorii:Lacuna Coil]]
 
 [[es:Marco Coti Zelati]]
 [[fr:Marco Coti Zelati]]
