*Empty MediaWiki Message*

--- a/Celati_Marko_Koti.mw
+++ b/Celati_Marko_Koti.mw
@@ -1,6 +1,7 @@
 [[Fail:Marco Coti Zelati.jpg|thumb|right|250px|Marko Koti Celati]]
-'''Marko Koti Celati''' ([[italijan kel'|ital.]]: ''Marco Coti Zelati''; sünd. [[19. eloku]] [[1975]], [[Milan]], [[Italii]]) om italijalaine basgitarist, [[Lacuna Coil]]-kollektivan ühtnii.
+'''Marko Koti Celati''' ([[italijan kel'|ital.]]: ''Marco Coti Zelati''; sünd. [[19. eloku]] [[1975]], [[Milan]], [[Italii]]) om italijalaine [[basgitar]]ist, [[Lacuna Coil]]-kollektivan ühtnii.
 {{stub}}
+{{Lacuna Coil}}
 
 [[Kategorii:Gitaristad]]
 [[Kategorii:Lacuna Coil]]
