*Empty MediaWiki Message*

--- a/Mil'jore_Kristiano.mw
+++ b/Mil'jore_Kristiano.mw
@@ -1,4 +1,4 @@
-'''Kristiano Mil'jore''' ([[italijan kel'|ital.]]: ''Cristiano Migliore''; sünd. [[20. semendku]] [[1971]], [[Milan]], [[Italii]]) om italijalaine gitarist, [[Lacuna Coil]]-kollektivan ühtnii.
+'''Kristiano Mil'jore''' ([[italijan kel'|ital.]]: ''Cristiano Migliore''; sünd. [[20. semendku]] [[1971]], [[Milan]], [[Italii]]) om italijalaine [[basgitar]]ist, [[Lacuna Coil]]-kollektivan ühtnii.
 {{stub}}
 {{Lacuna Coil}}
 
