*Empty MediaWiki Message*

--- a/Väzemskii_(Habarovskan_rand).mw
+++ b/Väzemskii_(Habarovskan_rand).mw
@@ -12,6 +12,7 @@
 [[en:Vyazemsky, Khabarovsk Krai]]
 [[eo:Vjazemskij (urbo)]]
 [[fa:ویازمسکی، خاباروفسک]]
+[[fr:Viazemski (ville)]]
 [[it:Vjazemskij (Russia)]]
 [[ja:ヴャーゼムスキー]]
 [[nn:Vjazemskij]]
