*Empty MediaWiki Message*

--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -4,7 +4,7 @@ Pajati erazvuiččiš Venäman festivališ dai Moskvas-ki <ref>Al’ona Jegorova
 
 Horan ohjandai – [[Melentjeva Lüdmila|Lüdmila Melentjeva]] <ref>Ozatelem Jubilejanke! // Kodima. – 2012. – 05 (semendku).</ref> (vodelpäi 1978), Venäman da Karjalan arvostadud radnik.
 
-{{refs}}
+{{Reflist}}
 
-[Kategorii:Rahvahankul’tur]
-[Kategorii:Vepsän muzik]
+[[Kategorii:Rahvahankul’tur]]
+[[Kategorii:Vepsän muzik]]
