--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -1,4 +1,4 @@
-'''Ve ́psän ra ́hvahaline hor''' (vai ''Vepsän rahvahan hor'', [[Venäkel'|ven.]]: ''«Вепсский народный хор»'') om üks' [[Karjal|Karjalan]] vanhembišpäi kollektivoišpäi, kudamb om sündunu vodel 1936 [[Šoutjärv|Šoutjärves]], i vodel 2011 kül'mkun lopus Vepsän rahvahaližele horale täudui 75 vot <ref>Irina Sotnikova. Siš eläb rahvahan heng // Kodima. – 2011. – 12 (tal'vku).</ref>.
+'''Ve ́psän ra ́hvahaline hor''' (vai ''Vepsän rahvahan hor'', [[Venäkel'|ven.]]: ''«Вепсский народный хор»'') om üks' [[Karjal|Karjalan]] vanhembišpäi kollektivoišpäi, kudamb om sündunu vodel 1936 [[Šoutjärv'|Šoutjärves]], i vodel 2011 kül'mkun lopus Vepsän rahvahaližele horale täudui 75 vot <ref>Irina Sotnikova. Siš eläb rahvahan heng // Kodima. – 2011. – 12 (tal'vku).</ref>.
 
 Se pajati dai pajatab erazvuiččiš [[Venäma|Venäman]] festivališ dai Moskvas-ki <ref>Al'ona Jegorova. Vepsän rahvahan hor Moskvas // Kodima. – 2009. – 07 (heinku).</ref>. Vepsän hor om tutab verhiš maiš-ki: Suomes, Norvegias, Ročin da Estin mal i toižiš maiš.
 
