--- a/Torun'.mw
+++ b/Torun'.mw
@@ -1,4 +1,4 @@
-'''Torun'''' ([[Pol'šan kel'|pol'š]].: ''Toruń'') om lidn [[Pol'šanma|Pol'šanmas]]. Se om üks' [[Kujavan-Pomorjen saodaveikundan|Kujavan-Pomorjen saodaveikundan]] pälidnoišpäi. Toine pälidn om [[Bigdošč]].
+'''Torun'''' ([[Pol'šan kel'|pol'š]].: ''Toruń'') om lidn [[Pol'šanma|Pol'šanmas]]. Se om üks' [[Kujavan-Pomorjen saodaveikundan|Kujavan-Pomorjen saodaveikundan]] pälidnoišpäi. Toine pälidn om [[Bidgošč]].
 
 {{stub}}
 [[Kategorii:Pol'šanman lidnad‎]]
