*Empty MediaWiki Message*

--- a/Krasnodar.mw
+++ b/Krasnodar.mw
@@ -15,9 +15,41 @@
 }}
 '''Krasnodar''' ([[venäkel'|ven.]]: ''Краснодар'') om lidn [[Venäma|Venämas]]. Se om [[Krasnodaran rand|Krasnodaran randan]] keskuz.
 
-Krasnodaran eläjiden lugu om 746,458 ristitud (2011). Pind om 192 km². Krasnodaras om läz 15 [[vepsläižed]].
+Krasnodaran eläjiden lugu om 746,458 ristitud (2011). Pind om 192 km². Krasnodaras om läz 15 [[vepsläižed|vepsläšt]].
 
 Lidnan pämez' om [[Jevlanov Vladimir|Vladimir Jevlanov]].
+
+== Administrativiž-territorialine jagand ==
+
+{| class="standard"
+!Ümbrik
+!Pind
+!Ristišt
+!Administracijan pämez'
+|-
+|1. [[Krasnodaran kesklidnalaine Päivlaskmaine ümbrik|Päivlaskmaine]]
+|22
+|159&nbsp;929
+|Logvinenko Dmitrii Sergejevič
+|-
+|2. [[Krasnodaran kesklidnalaine Karasunin ümbrik|Karasunin]]
+|152
+|239&nbsp;340
+|Hropov Nikolai Aleksejevič
+|-
+|3. [[Krasnodaran kesklidnalaine Kubaninrandaine ümbrik|Kubaninrandaine]]
+|474
+|235&nbsp;000
+|Mihejev Aleksandr Vladimirovič
+|-
+|4. [[Krasnodaran kesklidnalaine Keskümbrik|Keskümbrik]]
+|28,5
+|149&nbsp;276
+|Litvinov Väčeslav Nikolajevič
+|-
+|}
+
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
