--- a/Starobžegokai.mw
+++ b/Starobžegokai.mw
@@ -3,6 +3,9 @@
 
 Eläjiden lugu om 1993 ristitud (2010).
 
+== Irdkosketused ==
+* [http://www.stb01.ru/ Starobžegokajan küläkundan oficialine sait]
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
