*Empty MediaWiki Message*

--- a/Uz'_Zelandii.mw
+++ b/Uz'_Zelandii.mw
@@ -1,6 +1,6 @@
 {{1000}}
 {{Valdkund
-| Nimi = Uz' Merima<br />New Zealand<br />Aotearoa
+| Nimi = Uz' Zelandii<br />New Zealand<br />Aotearoa
 | Valdkundznam = Coat of Arms of New Zealand.svg
 | Flag = Flag of New Zealand.svg
 | Valdkundznam text = Uden Meriman valdkundznam
@@ -19,14 +19,14 @@
 | Telefonkod = +64
 | Aigvö = [[UTC]]+12
 }}
-'''Uz' Merima''', vai '''Uz' Zelandii''' ([[anglijan kel'|angl.]]: ''Uz' Merima'', [[maori (kel')|maori]]: ''Aotearoa'') om valdkund [[Okeanii|Okeanijas]]. Pälidn om [[Vellington]].
+'''Uz' Zelandii''', vai '''Uz' Merima''' ([[anglijan kel'|angl.]]: ''New Zealand'', [[maori (kel')|maori]]: ''Aotearoa'') om valdkund [[Okeanii|Okeanijas]]. Pälidn om [[Vellington]].
 
 Eläjiden lugu om 4,443,900 ristitud (2012). Pind om läz 268,680 km².
 
-Uden Meriman pämez' om [[Elizavet Toine]] (britanijan kunigaznaine); päministr om [[Kei Džon|Džon Kei]].
+Uden Zelandijan pämez' om [[Elizavet Toine]] (britanijan kunigaznaine); päministr om [[Kei Džon|Džon Kei]].
 {{stub}}
 
-[[Kategorii:Uz' Merima|*]]
+[[Kategorii:Uz' Zelandii|*]]
 
 [[ace:Seulandia Barô]]
 [[af:Nieu-Seeland]]
