*Empty MediaWiki Message*

--- a/Uz'_Zelandii.mw
+++ b/Uz'_Zelandii.mw
@@ -3,8 +3,8 @@
 | Nimi = Uz' Zelandii<br />New Zealand<br />Aotearoa
 | Valdkundznam = Coat of Arms of New Zealand.svg
 | Flag = Flag of New Zealand.svg
-| Valdkundznam text = Uden Meriman valdkundznam
-| Flag text = Uden Meriman flag
+| Valdkundznam text = Uden Zelandijan valdkundznam
+| Flag text = Uden Zelandijan flag
 | Pälidn = Vellington
 | Eläjiden lugu = 4.443.900
 | Voz' = 2012
@@ -14,7 +14,7 @@
 | Valdkundan pämez' = [[Elizavet Toine]]
 | Päministr = [[Kei Džon|Džon Kei]]
 | Religii = [[hristanuskond]]
-| Valüt = [[uden meriman dollar]]
+| Valüt = [[uden zelandijan dollar]]
 | Internet-domen = [[.nz]]
 | Telefonkod = +64
 | Aigvö = [[UTC]]+12
