--- a/Kegonpaniilind.mw
+++ b/Kegonpaniilind.mw
@@ -1,4 +1,5 @@
 [[Fail:Alauda arvensis 2.jpg|thumb|right|300px|Kegonpaniilind]]
+[[File: Alauda arvensis MHNT.jpg|thumb|'' Alauda arvensis '']]
 '''Kegonpaniilind''' ([[latinan kel'|lat.]] ''Alauda arvensis'') om [[lind]].
 
 {{stub}}
