*Empty MediaWiki Message*

--- a/Merikukoi.mw
+++ b/Merikukoi.mw
@@ -1,4 +1,5 @@
 [[Fail:Kiebitz 050424ausschnitt.jpg|thumb|right|275px|Merikukoi]]
+[[Fail:Vanellus vanellus MHNT.jpg|thumb|'' Vanellus vanellus '' ]]
 '''Merikukoi''' ([[latinan kel'|lat.]] ''Vanellus vanellus'') om [[lind]].
 
 {{stub}}
