Futbolklubad kirjamišton mödhe

--- a/FK_Zenit_Piter.mw
+++ b/FK_Zenit_Piter.mw
@@ -124,7 +124,8 @@ Kluban istorii augotihe vl 1925. Vl 1984 Zenitan vändajad tegihe NSTÜ:n čempi
 * [http://www.fc-zenit.ru/info/main.phtml Oficialine sait]
 * [http://www.landscrona.ru "Landskrona" - fanatoiden sait]
 
-[[Kategorii:Futbolklubad]]
+[[Kategorii:Venäman futbolklubad]]
+[[Kategorii:Futbolklubad kirjamišton mödhe]]
 [[Kategorii:Piter]]
 [[Kategorii:Zenit]]
 
