*Empty MediaWiki Message*

--- a/Die_Streuner.mw
+++ b/Die_Streuner.mw
@@ -37,7 +37,7 @@
 * [http://www.streuner.de/ Oficialine sait] (germ.)
 
 {{stub}}
-[[Kategorii:Folkmuzik]]
+[[Kategorii:Folkmuzikgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:Saksanman muzikgruppad‎]]
 
