жаль, в руВП не описано

--- a/Vepsän_rahvahan_hor.mw
+++ b/Vepsän_rahvahan_hor.mw
@@ -9,4 +9,5 @@ Horan ohjandai – [[Melent'jeva Lüdmila|Lüdmila Melent'jeva]] <ref>Ozatelem J
 {{stub}}
 
 [[Kategorii:Rahvahankul'tur]]
-[[Kategorii:Vepsän muzik]]
+[[Kategorii:Vepsän muzikgruppad]]
+[[Kategorii:Muzikgruppad kirjamišton mödhe]]
