--- a/Išan'.mw
+++ b/Išan'.mw
@@ -19,5 +19,6 @@ Išanan eläjiden lugu om 11 ristitud (2007).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Ишанино]]
