*Empty MediaWiki Message*

--- a/VAZ-2101.mw
+++ b/VAZ-2101.mw
@@ -2,8 +2,7 @@
 '''VAZ-2101 «Žiguli»''' ([[Venäkel'|venäkelel]]: ''ВАЗ-2101 «Жигули»'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|NSTÜ:n]] avto. 
 {{stub}}
 
-[[Kategorii:Tehnologii]]
-[[Kategorii:Transport]]
+[[Kategorii:Kebnavtod]]
 
 [[bg:ВАЗ 2101]]
 [[cs:VAZ 2101/2102]]
