*Empty MediaWiki Message*

--- a/.tg.mw
+++ b/.tg.mw
@@ -1,4 +1,4 @@
-'''.tg''' om [[Togo]]n internet-domen. Se om avaitud [[1996]]-nden vodel, no ei faktižešti ole kävutamas.
+'''.tg''' om [[Togo]]n internet-domen. Se om avaitud [[1996]]-ndel vodel, no ei faktižešti ole kävutamas.
 
 == Irdkosketused ==
 * [http://www.nic.tg Domenan sait]
