*Empty MediaWiki Message*

--- a/.de.mw
+++ b/.de.mw
@@ -1,4 +1,4 @@
-'''.az''' om [[Germanii|Germanijan]] internet-domen. Se om avaitud [[1986]]-nden voden kül'mkul.
+'''.de''' om [[Germanii|Germanijan]] internet-domen. Se om avaitud [[1986]]-nden voden kül'mkul.
 
 == Irdkosketused ==
 * [http://denic.de Domenan sait]
