*Empty MediaWiki Message*

--- a/Išan'.mw
+++ b/Išan'.mw
@@ -19,6 +19,7 @@ Išanan eläjiden lugu om 11 ristitud (2007).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Venäman küläd]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Ишанино]]
