*Empty MediaWiki Message*

--- a/.zm.mw
+++ b/.zm.mw
@@ -2,7 +2,7 @@
 
 == Irdkosketused ==
 * [http://www.zamnet.zm/corporate/domain_registration.htm Domenan sait]
-* [http://iana.org/domains/root/db/az.html IANA-informacii]
+* [http://iana.org/domains/root/db/zm.html IANA-informacii]
 
 {{CcTLD}}
 {{stub}}
