*Empty MediaWiki Message*

--- a/Arskaht'.mw
+++ b/Arskaht'.mw
@@ -1,21 +1,12 @@
-'''Arskaht'''' (ven.: ''Радогощь'', {{Kel’+fi|''Arskahti''}}) om vepsän külä [[Leningradan agj]]an [[Boksitogorskan rajon]]as.
+'''Arskaht'''' ([[Venäkel'|ven.]]: ''Радогощь'', {{Kel’+fi|''Arskahti''}}) om vepsän külä [[Leningradan agj]]an [[Boksitogorskan rajon]]as.
 
 Küläs elädas suvivepsän paginan pagižijad. Arskahtiš om kahesavozne škol, kus opetas vepsän kel't.
-
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
 
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
 [[Kategorii:Leningradan agj]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fi:Radogoštš]]
 [[ru:Радогощь (Ленинградская область)]]
