*Empty MediaWiki Message*

--- a/D'äšarv.mw
+++ b/D'äšarv.mw
@@ -19,5 +19,6 @@ D'äšarvas om 1 ristit (2007).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Яшезеро]]
