*Empty MediaWiki Message*

--- a/Järved_(külä).mw
+++ b/Järved_(külä).mw
@@ -1,18 +1,10 @@
 '''Järved''' (''Jarvenkülä'') — om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{DEFAULTSORT:Järved}}
 
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fi:Ozjora]]
