--- a/Kaist.mw
+++ b/Kaist.mw
@@ -1,17 +1,9 @@
 '''Kaist''' ([[venäkel'|ven.]]: ''Кийно'') om vepsän [[külä]] [[Vologdan agj]]an [[Babajevon rajon]]as.
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{Vepsän küläd Vologdan agjan Babajevon rajonas}}
 {{DEFAULTSORT:Kuja}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Кийно]]
