*Empty MediaWiki Message*

--- a/Korbal.mw
+++ b/Korbal.mw
@@ -11,5 +11,6 @@ Korbalha kävub avtobus [[Šugar'v]]espäi. Ted Korbalaspäi [[Nürgoil]]ha, kud
 [[Kategorii:Leningradan agj]]
 [[Kategorii:Vepsän küläd Leningradan agjas]]
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Корбеничи]]
