--- a/Karhil.mw
+++ b/Karhil.mw
@@ -7,3 +7,5 @@ Karhilas oli keskvepsän paginan ičevuitte alapagin.
 
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
