*Empty MediaWiki Message*

--- a/Kaleig.mw
+++ b/Kaleig.mw
@@ -10,4 +10,6 @@ Vodel 1922 [[Nevondkundaline Ühtištuz|Nevondkundaližen Ühtištusen]] vägiak
 {{DEFAULTSORT:Kaleig}}
 {{stub}}
 
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 [[ru:Рыбрека]]
