*Empty MediaWiki Message*

--- a/Kaskez.mw
+++ b/Kaskez.mw
@@ -1,18 +1,10 @@
 '''Kaskez''' (ven.: ''Каскесручей'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], Prionežskijas rajonas.
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{DEFAULTSORT:Kaskez}}
 
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Каскесручей]]
