*Empty MediaWiki Message*

--- a/Kaskez.mw
+++ b/Kaskez.mw
@@ -1,4 +1,4 @@
-'''Kaskez''' (ven.: ''Каскесручей'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], Prionežskijas rajonas.
+'''Kaskez''' ([[Venäkel'|ven.]]: ''Каскесручей'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], Prionežskijas rajonas.
 
 {{DEFAULTSORT:Kaskez}}
 
