*Empty MediaWiki Message*

--- a/Kvarcitkülä.mw
+++ b/Kvarcitkülä.mw
@@ -17,5 +17,7 @@
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 {{stub}}
 
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 [[fi:Šokšunranta]]
 [[ru:Кварцитный]]
