*Empty MediaWiki Message*

--- a/Matfejansel'g.mw
+++ b/Matfejansel'g.mw
@@ -1,15 +1,9 @@
 '''Matfejansel'g''' ([[venäkel'|ven.]] ''Матвеева Сельга'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], [[Änižröunan rajon]]as.
 
-== Istorii ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{DEFAULTSORT:Matfejanselg}}
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Матвеева Сельга]]
