--- a/Mecantaga.mw
+++ b/Mecantaga.mw
@@ -1,23 +1,14 @@
 '''Mecantaga''' om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]]. Cf. [[Šoutjärv’|Šoutjär’v]].
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 
 {{DEFAULTSORT:Mecantaga}}
 {{stub}}
 
-[[Category:Vepsän küläd]]
-[[Category:Karjalan Tazovaldkund]]
-[[Category:Vepsän küläd Karjalan Tazovaldkundas]]
+[[Kategorii:Vepsän küläd]]
+[[Kategorii:Karjalan Tazovaldkund]]
+[[Kategorii:Vepsän küläd Karjalan Tazovaldkundas]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Залесье (Карелия)]]
 [[fi:Metsäntaka]]
