*Empty MediaWiki Message*

--- a/Nemž.mw
+++ b/Nemž.mw
@@ -1,14 +1,6 @@
 '''Nemž''' om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
