*Empty MediaWiki Message*

--- a/Mägikülä.mw
+++ b/Mägikülä.mw
@@ -19,5 +19,6 @@ Mägikülän eläjiden lugu om 2 ristitud (2007).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Горное Шёлтозеро]]
