*Empty MediaWiki Message*

--- a/Mäggär'v.mw
+++ b/Mäggär'v.mw
@@ -18,4 +18,6 @@
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
 {{stub}}
 
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 [[ru:Миницкая]]
