*Empty MediaWiki Message*

--- a/Meliorativnii.mw
+++ b/Meliorativnii.mw
@@ -19,6 +19,7 @@ Meliorativnijan eläjiden lugu om 2367 ristitud (1989).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fi:Meliorativnyi]]
 [[ru:Мелиоративный]]
