--- a/Kuzedejevo.mw
+++ b/Kuzedejevo.mw
@@ -5,5 +5,6 @@ Keskškol, raudtestancii Novokuzneck-Mundibaš-linijal, XVIII vsadan jumalanpert
 {{stub}}
 
 [[Category:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Кузедеево]]
