*Empty MediaWiki Message*

--- a/Puht.mw
+++ b/Puht.mw
@@ -19,5 +19,6 @@ Puhtan eläjiden lugu om 163 ristitud (2007).
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Пухта]]
