думаю что ни о чём

--- a/Mecantaga.mw
+++ b/Mecantaga.mw
@@ -1,4 +1,4 @@
-'''Mecantaga''' om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]]. Cf. [[Šoutjärv’|Šoutjär’v]].
+'''Mecantaga''' om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]].
 
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 
