*Empty MediaWiki Message*

--- a/Reboil.mw
+++ b/Reboil.mw
@@ -3,3 +3,5 @@
 Eläjiden enambuz - venäläižed, no küläs elädas vepsläižed-ki.
 
 {{Vepsän küläd Leningradan agjan Pöudon rajonas}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
