*Empty MediaWiki Message*

--- a/Surg.mw
+++ b/Surg.mw
@@ -20,5 +20,6 @@ Surgan eläjiden lugu om 32 ristitud (2002).
 
 [[Kategorii:Vepsän küläd]]
 [[Kategorii:Babajevon rajon]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Никонова Гора (Вологодская область)]]
