*Empty MediaWiki Message*

--- a/Sodjärv.mw
+++ b/Sodjärv.mw
@@ -1,16 +1,8 @@
 '''Sodjärv''' om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Boksitogorskan rajon|Boksitogorskan rajonas]].
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{Vepsän küläd Leningradan agjan Boksitogorskan rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 <!-- нужны интервики-ссылки -->
