*Empty MediaWiki Message*

--- a/Tervoil.mw
+++ b/Tervoil.mw
@@ -1,14 +1,6 @@
 '''Tervoil''' om vepsän [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Pöudon rajon|Pöudon rajonas]].
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{Vepsän küläd Leningradan agjan Pöudon rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
