Тут с названием проблема была

--- a/Ustii.mw
+++ b/Ustii.mw
@@ -1,4 +1,4 @@
-'''Ustii''' vai '''Jogensu''' ([[Venäkel'|venäkelel]]: ''Устье'') om [[Vepsläižed|vepsän]] [[Külä|külä]] Šokšan vepsän küläkundas, [[Karjalan Tazovaldkund|Karjalan Tazovaldkundan]] [[Änižröunan rajon|Änižröunan (Änižrandan) rajon]]as.
+'''Ustii''' vai '''Jogensu''' ([[Venäkel'|venäkelel]]: ''Устье'') om [[Vepsänma|vepsän]] [[Külä|külä]] [[Šokšan vepsän küläkund]]as, [[Karjalan Tazovaldkund]]an [[Änižröunan rajon|Änižröunan (Änižrandan) rajon]]as.
 
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 
