*Empty MediaWiki Message*

--- a/Toižeg.mw
+++ b/Toižeg.mw
@@ -1,18 +1,10 @@
 '''Toižeg''' (ven.: ''Другая река'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], [[Änižröunan rajon|Änižröunan (Änižrandan) rajonas]].
 
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
-
 {{DEFAULTSORT:Toižeg}}
 
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ru:Другая Река]]
