*Empty MediaWiki Message*

--- a/Šugar'v.mw
+++ b/Šugar'v.mw
@@ -19,6 +19,7 @@
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fi:Šugozero]]
 [[ru:Шугозеро (посёлок)]]
