*Empty MediaWiki Message*

--- a/Toižeg.mw
+++ b/Toižeg.mw
@@ -1,4 +1,4 @@
-'''Toižeg''' (ven.: ''Другая река'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], [[Änižröunan rajon|Änižröunan (Änižrandan) rajonas]].
+'''Toižeg''' ([[Venäkel'|ven.]]: ''Другая река'') om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], [[Änižröunan rajon|Änižröunan (Änižrandan) rajonas]].
 
 {{DEFAULTSORT:Toižeg}}
 
