*Empty MediaWiki Message*

--- a/Mecantaga.mw
+++ b/Mecantaga.mw
@@ -1,4 +1,4 @@
-'''Mecantaga''' om [[Vepsänma|vepsän]] külä [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]].
+'''Mecantaga''' om [[vepsläižed|vepsän]] külä [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]].
 
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 
