*Empty MediaWiki Message*

--- a/Vil'häl.mw
+++ b/Vil'häl.mw
@@ -9,5 +9,7 @@ Vil'hälas oma küläkirjišt, fel'dšeriž-akušerine punkt da kul'turkodi. 200
 {{stub}}
 {{DEFAULTSORT:Vil’häl}}
 
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 [[fi:Jaroslavitši]]
 [[ru:Ярославичи (Подпорожский район)]]
