*Empty MediaWiki Message*

--- a/Vingl.mw
+++ b/Vingl.mw
@@ -1,17 +1,15 @@
 '''Vingl''' (''Vidl'', ven.: ''Винницы'') om vanh [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
 
-== Istorii ==
-
-== Geografijan andmused ==
-
 == Eläjad ==
-Vinglas om äi vepsläižid. Vepsäižiden lugun mödhe nece žilo lidiruib [[Leningradan agj]]as.
+Vinglas om äi [[vepsläižed|vepsläižid]]. Vepsäižiden lugun mödhe nece žilo lidiruib [[Leningradan agj]]as.
 
 == Ižanduz ==
 
 {{DEFAULTSORT:Vingl}}
 {{Vepsän küläd Leningradan agjan Podporožjen rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[fi:Vinnitsy]]
 [[ru:Винницы]]
