*Empty MediaWiki Message*

--- a/Vingl.mw
+++ b/Vingl.mw
@@ -1,4 +1,4 @@
-'''Vingl''' (''Vidl'', ven.: ''Винницы'') om vanh [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
+'''Vingl''' (''Vidl'', [[Venäkel'|ven.]]: ''Винницы'') om vanh [[Külä|külä]] [[Leningradan agj|Leningradan agjan]] [[Podporožjen rajon|Podporožjen rajonas]].
 
 == Eläjad ==
 Vinglas om äi [[vepsläižed|vepsläižid]]. Vepsäižiden lugun mödhe nece žilo lidiruib [[Leningradan agj]]as.
