--- a/Šoutjärv'.mw
+++ b/Šoutjärv'.mw
@@ -9,6 +9,8 @@ Avtomatk Šoutarven da Petroskoin keskes om 83 kilometrad, regionaline R19-te ([
 {{DEFAULTSORT:Šoutjär’v}}
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 [[be:Вёска Шаўтвозера]]
 [[en:Shyoltozero]]
 [[et:Šoutjärvi]]
