*Empty MediaWiki Message*

--- a/Šokš.mw
+++ b/Šokš.mw
@@ -7,5 +7,7 @@ Avtomatk Šokšan da Petroskoin keskes om 60 kilometrad, regionaline R19-te ([[P
 {{Vepsän küläd Karjalan Tazovaldkundas}}
 {{DEFAULTSORT:Šokš}}
 
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 [[be-x-old:Шокша (Карэлія)]]
 [[ru:Шокша (Карелия)]]
