*Empty MediaWiki Message*

--- a/Vehkoi.mw
+++ b/Vehkoi.mw
@@ -1,18 +1,11 @@
 [[Fail:Vekhruchey church.JPG|pisi|250px]]
-'''Vehkoi''' (ven.: ''Вехручей'') — om vepsän [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], Prionežskijas rajonas.
-
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
+'''Vehkoi''' ([[Venäkel'|ven.]]: ''Вехручей'') — om [[Vepsläižed|vepsän]] [[Külä|külä]] [[Karjalan Tazovaldkund|Karjalan Tazovaldkundas]], Prionežskijas rajonas.
 
 {{DEFAULTSORT:Vehkoi}}
 {{Vepsän küläd Karjalan Tazovaldkundas}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
+
 {{stub}}
 
 [[ru:Вехручей]]
