*Empty MediaWiki Message*

--- a/Šušt.mw
+++ b/Šušt.mw
@@ -1,17 +1,9 @@
-'''Šušt''' (ven.: ''Ошта'') om vepsän [[Külä|külä]] [[Vologdan agj|Vologdan agjan]] [[Vitegran rajon|Vitegran rajonas]].
-
-== Istorii ==
-
-== Politine sistem ==
-
-== Geografijan andmused ==
-
-== Eläjad ==
-
-== Ižanduz ==
+'''Šušt''' ([[Venäkel'|ven.]]: ''Ошта'') om [[Vepsläižed|vepsän]] [[Külä|külä]] [[Vologdan agj|Vologdan agjan]] [[Vitegran rajon|Vitegran rajonas]].
 
 {{Vepsän küläd Vologdan agjan Vitegran rajonas}}
 {{stub}}
+
+[[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 {{DEFAULTSORT:Šušt}}
 [[fi:Ošta]]
