*Empty MediaWiki Message*

--- a/Katesemnižed.mw
+++ b/Katesemnižed.mw
@@ -28,7 +28,7 @@ Alaklassad:
 
 {{stub}}
 
-[[Kategorii:Kazmused kirjamišton mödhe]]
+[[Kategorii:Kazmused]]
 
 [[af:Bedeksadiges]]
 [[an:Magnoliophyta]]
